docs & feat: Technologies used added to README.md and About Me and Projects sections added to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reece Smith - Personal Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
     <script src="https://kit.fontawesome.com/642b3ce8cf.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -16,10 +17,10 @@
                 <a href="#contact">Contact</a>
             </ul>
         </nav>
-        <div id="social-links">
-            <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com" target="_blank"><i class="fa fa-github"></i></a>
-        </div>
+        <ul>
+            <li><a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="https://github.com" target="_blank"><i class="fa fa-github"></i></a></li>
+        </ul>
         <!--Main and sub headings-->
         <h1>Reece Smith</h1>
         <h2>Full Stack Web Developer</h2>
@@ -32,5 +33,58 @@
             <i class="fas fa-chevron-down"></i>
         </div>
    </header>
+   <!-- Heading and paragraph for the about section-->
+   <section id="about">
+        <h2>Hello World! I'm Reece Smith</h2>
+        <p>
+            I'm currently a dedicated student at the Code Institute, 
+            immersing myself in the exciting world of web development. 
+            My journey so far has included learning languages such as 
+            HTML and CSS, as well as the Bootstrap framework. Additionally, 
+            I've become proficient in version control software like Git, 
+            and I've explored tools such as Balsamiq for wireframing and 
+            GitHub as a software development platform. I've also utilised 
+            libraries such as Font Awesome and Google Fonts to enhance my projects. 
+            Speaking of which, why not view all my projects just below. If you 
+            have any questions, please feel free to contact me.
+        </p>
+        <!--Contact me button that takes you to the contact section-->
+        <a href="#contact">
+            <button>Contact Me</button>
+        </a>
+        <!--Portait that pairs with the about me section writing-->
+        <img src="assets/images/About me.png" alt="Reece Smith Portrait">
+        <!--Scroll down prompt and arrow icon-->
+        <p>Why Not Check Out My Projects?</p>
+        <i class="fas fa-chevron-down"></i>
+   </section>
+   <section id="projects">
+        <figure>
+            <a href=""><figcaption>Project 1 Title</figcaption></a>
+            <a href=""><img src="assets/images/Not project image.jpg" alt="picture of my dog in place of a project screenshoot"></a>
+        </figure>
+        <figure>
+            <a href=""><img src="assets/images/Not project image.jpg" alt="picture of my dog in place of a project screenshoot"></a>
+            <a href=""><figcaption>Project 2 Title</figcaption></a>
+        </figure>
+        <figure>
+            <a href=""><figcaption>Project 3 Title</figcaption></a>
+            <a href=""><img src="assets/images/Not project image.jpg" alt="picture of my dog in place of a project screenshoot"></a>
+        </figure>
+        <figure>
+            <a href=""><img src="assets/images/Not project image.jpg" alt="picture of my dog in place of a project screenshoot"></a>
+            <a href=""><figcaption>Project 4 Title</figcaption></a>
+        </figure>
+   </section>
+   <section id="contact">
+        <ul>
+            <li>
+                <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+            </li>
+            <li>
+                <a href="https://github.com" target="_blank"><i class="fa fa-github"></i></a>
+            </li>
+        </ul>
+   </section>
 </body>
 </html>
