--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!--Main and sub headings-->
         <h1>Reece Smith</h1>
         <h2>Full Stack Web Developer</h2>
-        <h3>Turning ideas into reality, one line of code at a time</h3>
+        <h3>Turning ideas into reality, one line of code at a time,</h3>
         <!--Portait -->
         <img src="assets/images/Header.png" alt="Reece Smith Portrait">
         <!--Scroll down prompt-->
@@ -59,6 +59,7 @@
         <i class="fas fa-chevron-down"></i>
    </section>
    <section id="projects">
+    <!--Project gallery with anchored screenshots and project titles-->
         <figure>
             <a href=""><figcaption>Project 1 Title</figcaption></a>
             <a href=""><img src="assets/images/Not project image.jpg" alt="picture of my dog in place of a project screenshoot"></a>
@@ -77,14 +78,36 @@
         </figure>
    </section>
    <section id="contact">
+    <!--List of ways to contact me-->
         <ul>
             <li>
+                <i class="fa-solid fa-envelope"></i><p>Email</p><p>reecesmith@hotmail.co.uk</p>
+            </li>
+            <li>
+                <i class="fa-solid fa-phone"></i><p>Phone</p><p>+44 (0)7398 285383</p>
+            </li>
+            <li>
                 <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://linkedin.com" target="_blank">Linkedin</a>
             </li>
             <li>
                 <a href="https://github.com" target="_blank"><i class="fa fa-github"></i></a>
+                <a href="https://github.com" target="_blank">GitHub</a>
             </li>
         </ul>
+        <!--Contact form-->
+        <h2>Contact Me</h2>
+        <form action="" method="post">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" placeholder="Name" required>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="Email" required>
+            <label for="number">Number</label>
+            <input type="number" id="number" name="number" placeholder="Number">
+            <label for="message">Message</label>
+            <textarea id="message" name="message" placeholder="Message" rows="10" cols="30" required></textarea>
+            <input type="submit" value="Submit">
+        </form>
    </section>
 </body>
 </html>
