--- a/index.html
+++ b/index.html
@@ -1,113 +1,219 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reece Smith - Personal Portfolio</title>
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/642b3ce8cf.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <header>
         <!--Navigation bar and social links-->
-        <nav>
-            <ul>
-                <a href="#about">About Me</a>
-                <a href="#projects">Projects</a>
-                <a href="#contact">Contact</a>
-            </ul>
-        </nav>
-        <ul>
-            <li><a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-            <li><a href="https://github.com" target="_blank"><i class="fa fa-github"></i></a></li>
-        </ul>
-        <!--Main and sub headings-->
-        <h1>Reece Smith</h1>
-        <h2>Full Stack Web Developer</h2>
-        <h3>Turning ideas into reality, one line of code at a time,</h3>
-        <!--Portait -->
-        <img src="assets/images/Header.png" alt="Reece Smith Portrait">
-        <!--Scroll down prompt-->
-        <div>
-            <p>More Below</p>
+        <!--Bootstrap grid used to position the soical links on one side and the navigation bar on another-->
+        <div class="container-fluid" class="container-xxl">
+            <div class="row">
+                <div class="col-6">
+                    <ul class="nav justify-content-start">
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://linkedin.com" target="_blank">
+                                <i class="fab fa-linkedin display-6"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://github.com" target="_blank">
+                                <i class="fa fa-github display-6"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-6">
+                    <!--Navigation bar toggler used on medium screens and below-->
+                    <!--On large screen and above the navigation bar is fully expanded-->
+                    <!--CSS will be used to fix the social links and navigation toggle to the top of the page-->
+                    <nav class="navbar navbar-expand-lg justify-content-center">
+                        <button class="navbar-toggler btn-light" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div id="navbarSupportedContent" class="collapse navbar-collapse justify-content-center">
+                            <ul class="navbar-nav">
+                                <li class="nav-item h4">
+                                    <a class="nav-link" href="#about">About Me</a>
+                                </li>
+                                <li class="nav-item h4">
+                                    <a class="nav-link" href="#projects">Projects</a>
+                                </li>
+                                <li class="nav-item h4">
+                                    <a class="nav-link" href="#contact">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+            <!--Main and sub headings-->
+            <!--Bootstrap used to grid the headings and portrait-->
+            <!--On medium screes and below the headings and potriat are stacked on top of each other-->
+            <div class="row align-items-center">
+                <div class="col-lg-6" class="col-12" class="align-items-center">
+                    <h1 class="text-center">Reece Smith</h1>
+                    <h2 class="text-center">Full Stack Web Developer</h2>
+                    <h3 class="text-center">Turning ideas into reality, one line of code at a time</h3>
+                </div>
+                <!--Portait -->
+                <div class="col-lg-6" class="col-12">
+                    <img class="img-fluid" src="assets/images/Header.png" alt="Reece Smith Portrait">
+                </div>
+            </div>
+            <!--Scroll down prompt-->
+            <!--This will be moved into place with CSS and JS will be used to make the chevron bounce-->
+            <div>
+                <p>More Below</p>
+                <i class="fas fa-chevron-down"></i>
+            </div>
+        </div>
+    </header>
+    <section id="about">
+        <!-- Heading and paragraph for the about section-->
+        <!--Bootsrap grid used on writing and portrait so they are side by side-->
+        <!--On medium and smaller screens they will be stacked on top of each other-->
+        <div class="container-fluid mt-5" class="container-xxl">
+            <div class="row align-items-center flex-row-reverse">
+
+                <div class="col-lg-6 col-12">
+                    <h2 class="text-center">Hello World! I'm Reece Smith</h2>
+                    <p>
+                        I'm currently a dedicated student at the Code Institute,
+                        immersing myself in the exciting world of web development.
+                        My journey so far has included learning languages such as
+                        HTML and CSS, as well as the Bootstrap framework. Additionally,
+                        I've become proficient in version control software like Git,
+                        and I've explored tools such as Balsamiq for wireframing and
+                        GitHub as a software development platform. I've also utilised
+                        libraries such as Font Awesome and Google Fonts to enhance my projects.
+                        Speaking of which, why not view all my projects just below. If you
+                        have any questions, please feel free to contact me.
+                    </p>
+                    <!--Contact me button that takes you to the contact section-->
+                    <div class="text-center">
+                        <a href="#contact">
+                            <button class="btn btn-primary">Contact Me</button>
+                        </a>
+                    </div>
+
+                </div>
+                <!--Portrait for the about me section-->
+                <div class="col-lg-6 col-12">
+                    <img src="assets/images/About me.png" alt="Reece Smith Portrait" class="img-fluid">
+                </div>
+            </div>
+            <!--Scroll down prompt and arrow icon-->
+            <!--CCS will be used to move this into place-->
+            <p>Why Not Check Out My Projects?</p>
             <i class="fas fa-chevron-down"></i>
         </div>
-   </header>
-   <!-- Heading and paragraph for the about section-->
-   <section id="about">
-        <h2>Hello World! I'm Reece Smith</h2>
-        <p>
-            I'm currently a dedicated student at the Code Institute, 
-            immersing myself in the exciting world of web development. 
-            My journey so far has included learning languages such as 
-            HTML and CSS, as well as the Bootstrap framework. Additionally, 
-            I've become proficient in version control software like Git, 
-            and I've explored tools such as Balsamiq for wireframing and 
-            GitHub as a software development platform. I've also utilised 
-            libraries such as Font Awesome and Google Fonts to enhance my projects. 
-            Speaking of which, why not view all my projects just below. If you 
-            have any questions, please feel free to contact me.
-        </p>
-        <!--Contact me button that takes you to the contact section-->
-        <a href="#contact">
-            <button>Contact Me</button>
-        </a>
-        <!--Portait that pairs with the about me section writing-->
-        <img src="assets/images/About me.png" alt="Reece Smith Portrait">
-        <!--Scroll down prompt and arrow icon-->
-        <p>Why Not Check Out My Projects?</p>
-        <i class="fas fa-chevron-down"></i>
-   </section>
-   <section id="projects">
-    <!--Project gallery with anchored screenshots and project titles-->
-        <figure>
-            <a href=""><figcaption>Project 1 Title</figcaption></a>
-            <a href=""><img src="assets/images/Not project image.jpg" alt="picture of my dog in place of a project screenshoot"></a>
-        </figure>
-        <figure>
-            <a href=""><img src="assets/images/Not project image.jpg" alt="picture of my dog in place of a project screenshoot"></a>
-            <a href=""><figcaption>Project 2 Title</figcaption></a>
-        </figure>
-        <figure>
-            <a href=""><figcaption>Project 3 Title</figcaption></a>
-            <a href=""><img src="assets/images/Not project image.jpg" alt="picture of my dog in place of a project screenshoot"></a>
-        </figure>
-        <figure>
-            <a href=""><img src="assets/images/Not project image.jpg" alt="picture of my dog in place of a project screenshoot"></a>
-            <a href=""><figcaption>Project 4 Title</figcaption></a>
-        </figure>
-   </section>
-   <section id="contact">
-    <!--List of ways to contact me-->
-        <ul>
-            <li>
-                <i class="fa-solid fa-envelope"></i><p>Email</p><p>reecesmith@hotmail.co.uk</p>
-            </li>
-            <li>
-                <i class="fa-solid fa-phone"></i><p>Phone</p><p>+44 (0)7398 285383</p>
-            </li>
-            <li>
-                <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://linkedin.com" target="_blank">Linkedin</a>
-            </li>
-            <li>
-                <a href="https://github.com" target="_blank"><i class="fa fa-github"></i></a>
-                <a href="https://github.com" target="_blank">GitHub</a>
-            </li>
-        </ul>
-        <!--Contact form-->
-        <h2>Contact Me</h2>
-        <form action="" method="post">
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" placeholder="Name" required>
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="Email" required>
-            <label for="number">Number</label>
-            <input type="number" id="number" name="number" placeholder="Number">
-            <label for="message">Message</label>
-            <textarea id="message" name="message" placeholder="Message" rows="10" cols="30" required></textarea>
-            <input type="submit" value="Submit">
-        </form>
-   </section>
+    </section>
+    <section id="projects">
+        <!--Project gallery with anchored screenshots and project titles-->
+        <!--Bootstrap grid used to allow for only two project screenshots to be side by side-->
+        <!--On medium screens and below the screenshots will stack-->
+        <!--CSS will be used to change the order of titles and screenshots for smaller screens-->
+        <div class="container-fluid mt-5" class="container-xxl">
+            <div class="row text-center">
+                <div class="col-lg-6 col-12">
+                    <figure>
+                        <a class="text-decoration-none" href="">
+                            <figcaption class="h2">Project 1 Title</figcaption>
+                        </a>
+                        <a href=""><img class="img-fluid mt-4" src="assets/images/Not project image.jpg"
+                                alt="picture of my dog in place of a project screenshoot"></a>
+                    </figure>
+                </div>
+                <div class="col-lg-6 col-12">
+                    <figure>
+                        <a href=""><img class="img-fluid mb-4" src="assets/images/Not project image.jpg"
+                                alt="picture of my dog in place of a project screenshoot"></a>
+                        <a class="text-decoration-none" href="">
+                            <figcaption class="h2">Project 2 Title</figcaption>
+                        </a>
+                    </figure>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-lg-6 col-12">
+                    <figure>
+                        <a class="text-decoration-none" href="">
+                            <figcaption class="h2 mt-4">Project 3 Title</figcaption>
+                        </a>
+                        <a href=""><img class="img-fluid mt-4" src="assets/images/Not project image.jpg"
+                                alt="picture of my dog in place of a project screenshoot"></a>
+                    </figure>
+                </div>
+                <div class="col-lg-6 col-12">
+                    <figure class="mt-4">
+                        <a href=""><img class="img-fluid mb-4" src="assets/images/Not project image.jpg"
+                                alt="picture of my dog in place of a project screenshoot"></a>
+                        <a class="text-decoration-none" href="">
+                            <figcaption class="h2">Project 4 Title</figcaption>
+                        </a>
+                    </figure>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="contact">
+        <!--List of ways to contact me-->
+        <!--Bootstrap grid used to position the contact way list and contact form side by side-->
+        <!--On medium and smaller screens these will stack-->
+        <!--CSS will be used to improve the height and position-->
+        <div class="container-fluid mt-5" class="container-xxl">
+            <div class="row">
+                <div class="col-lg-6 col-12">
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <i class="fa-solid fa-envelope"></i>
+                            <p>Email</p>
+                            <p>reecesmith@hotmail.co.uk</p>
+                        </li>
+                        <li class="list-group-item">
+                            <i class="fa-solid fa-phone"></i>
+                            <p>Phone</p>
+                            <p>+44 (0)7398 285383</p>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://linkedin.com" target="_blank">Linkedin</a>
+                        </li>
+                        <li class="list-group-item">
+                            <a href="https://github.com" target="_blank"><i class="fa fa-github"></i></a>
+                            <a href="https://github.com" target="_blank">GitHub</a>
+                        </li>
+                    </ul>
+                </div>
+                <!--Contact form-->
+                <div class="col-lg-6 col-12 text-center">
+                    <h2>Contact Me</h2>
+                    <form action="" method="post">
+                        <label class="form-label mt-4" for="name">Name</label>
+                        <input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
+                        <label for="email" class="form-label mt-4">Email</label>
+                        <input type="email" class="form-control" id="email" name="email" placeholder="Email" required>
+                        <label for="number" class="form-label mt-4">Number</label>
+                        <input type="number" class="form-control" id="number" name="number" placeholder="Number">
+                        <label for="message" class="form-label mt-4">Message</label>
+                        <textarea id="message" class="form-control" name="message" placeholder="Message" rows="10"
+                            cols="30" required></textarea>
+                        <input type="submit" class="mt-4 btn btn-primary" value="Submit">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
