--- a/index.html
+++ b/index.html
@@ -1,113 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reece Smith - Personal Portfolio</title>
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/642b3ce8cf.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <header>
-        <!--Navigation bar and social links-->
-        <nav>
-            <ul>
-                <a href="#about">About Me</a>
-                <a href="#projects">Projects</a>
-                <a href="#contact">Contact</a>
-            </ul>
-        </nav>
-        <ul>
-            <li><a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-            <li><a href="https://github.com" target="_blank"><i class="fa fa-github"></i></a></li>
-        </ul>
+    <header class="container-fluid">
+        <!--Social links-->
+        <div class="row">
+            <div class="col-6">
+                <ul class="nav">
+                    <li class="nav-item"><a class="nav-link" href="https://linkedin.com" target="_blank"><i
+                                class="fab fa-linkedin"></i></a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://github.com" target="_blank"><i
+                                class="fa fa-github"></i></a></li>
+                </ul>
+            </div>
+            <!--Navigation bar-->
+            <div class="col-6">
+                <nav class="navbar navbar-expand-lg justify-content-center">
+                    <button type="button" class="navbar-toggler" data-bs-target="#NavCollapse"
+                        data-bs-toggle="collapse">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-center" id="NavCollapse">
+                        <ul class="navbar-nav align-items-center">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#about">About Me</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#projects">Projects</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#contact">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </div>
         <!--Main and sub headings-->
-        <h1>Reece Smith</h1>
-        <h2>Full Stack Web Developer</h2>
-        <h3>Turning ideas into reality, one line of code at a time,</h3>
-        <!--Portait -->
-        <img src="assets/images/Header.png" alt="Reece Smith Portrait">
+        <div class="row align-items-center text-center">
+            <div class="col-lg-6">
+                <h1>Reece Smith</h1>
+                <h2>Full Stack Web Developer</h2>
+                <h3>Turning ideas into reality, one line of code at a time.</h3>
+            </div>
+             <!--Portait -->
+            <div class="col-lg-6">
+                <img class="img-fluid" src="assets/images/Header.png" alt="Reece Smith Portrait">
+            </div>
+        </div>
         <!--Scroll down prompt-->
-        <div>
+        <div style="position:absolute;">
             <p>More Below</p>
             <i class="fas fa-chevron-down"></i>
         </div>
-   </header>
-   <!-- Heading and paragraph for the about section-->
-   <section id="about">
-        <h2>Hello World! I'm Reece Smith</h2>
-        <p>
-            I'm currently a dedicated student at the Code Institute, 
-            immersing myself in the exciting world of web development. 
-            My journey so far has included learning languages such as 
-            HTML and CSS, as well as the Bootstrap framework. Additionally, 
-            I've become proficient in version control software like Git, 
-            and I've explored tools such as Balsamiq for wireframing and 
-            GitHub as a software development platform. I've also utilised 
-            libraries such as Font Awesome and Google Fonts to enhance my projects. 
-            Speaking of which, why not view all my projects just below. If you 
-            have any questions, please feel free to contact me.
-        </p>
-        <!--Contact me button that takes you to the contact section-->
-        <a href="#contact">
-            <button>Contact Me</button>
-        </a>
+    </header>
+    <section id="about" class="container-fluid text-center">
         <!--Portait that pairs with the about me section writing-->
-        <img src="assets/images/About me.png" alt="Reece Smith Portrait">
+        <div class="row align-items-center">
+            <div class="col-lg-6">
+                <img class="img-fluid" src="assets/images/About me.png" alt="Reece Smith Portrait">
+            </div>
+            <!-- Heading and paragraph for the about section-->
+            <div class="col-lg-6">
+                <h2>Hello World! I'm Reece Smith</h2>
+                <p>
+                    I'm currently a dedicated student at the Code Institute,
+                    immersing myself in the exciting world of web development.
+                    My journey so far has included learning languages such as
+                    HTML and CSS, as well as the Bootstrap framework. Additionally,
+                    I've become proficient in version control software like Git,
+                    and I've explored tools such as Balsamiq for wireframing and
+                    GitHub as a software development platform. I've also utilised
+                    libraries such as Font Awesome and Google Fonts to enhance my projects.
+                    Speaking of which, why not view all my projects just below. If you
+                    have any questions, please feel free to contact me.
+                </p>
+                <!--Contact me button that takes you to the contact section-->
+                <a href="#contact">
+                    <button>Contact Me</button>
+                </a>
+            </div>
+        </div>
         <!--Scroll down prompt and arrow icon-->
-        <p>Why Not Check Out My Projects?</p>
-        <i class="fas fa-chevron-down"></i>
-   </section>
-   <section id="projects">
-    <!--Project gallery with anchored screenshots and project titles-->
-        <figure>
-            <a href=""><figcaption>Project 1 Title</figcaption></a>
-            <a href=""><img src="assets/images/Not project image.jpg" alt="picture of my dog in place of a project screenshoot"></a>
-        </figure>
-        <figure>
-            <a href=""><img src="assets/images/Not project image.jpg" alt="picture of my dog in place of a project screenshoot"></a>
-            <a href=""><figcaption>Project 2 Title</figcaption></a>
-        </figure>
-        <figure>
-            <a href=""><figcaption>Project 3 Title</figcaption></a>
-            <a href=""><img src="assets/images/Not project image.jpg" alt="picture of my dog in place of a project screenshoot"></a>
-        </figure>
-        <figure>
-            <a href=""><img src="assets/images/Not project image.jpg" alt="picture of my dog in place of a project screenshoot"></a>
-            <a href=""><figcaption>Project 4 Title</figcaption></a>
-        </figure>
-   </section>
-   <section id="contact">
-    <!--List of ways to contact me-->
-        <ul>
-            <li>
-                <i class="fa-solid fa-envelope"></i><p>Email</p><p>reecesmith@hotmail.co.uk</p>
-            </li>
-            <li>
-                <i class="fa-solid fa-phone"></i><p>Phone</p><p>+44 (0)7398 285383</p>
-            </li>
-            <li>
-                <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://linkedin.com" target="_blank">Linkedin</a>
-            </li>
-            <li>
-                <a href="https://github.com" target="_blank"><i class="fa fa-github"></i></a>
-                <a href="https://github.com" target="_blank">GitHub</a>
-            </li>
-        </ul>
-        <!--Contact form-->
-        <h2>Contact Me</h2>
-        <form action="" method="post">
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" placeholder="Name" required>
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="Email" required>
-            <label for="number">Number</label>
-            <input type="number" id="number" name="number" placeholder="Number">
-            <label for="message">Message</label>
-            <textarea id="message" name="message" placeholder="Message" rows="10" cols="30" required></textarea>
-            <input type="submit" value="Submit">
-        </form>
-   </section>
+        <div style="position:absolute;">
+            <p>Why Not Check Out My Projects?</p>
+            <i class="fas fa-chevron-down"></i>
+        </div>
+    </section>
+    <section id="projects" class="container-fluid text-center">
+        <!--Project gallery with anchored screenshots and project titles-->
+        <div class="row">
+            <div class="col-lg-6">
+                <figure>
+                    <a href="">
+                        <figcaption>Project 1 Title</figcaption>
+                    </a>
+                    <a href=""><img class="img-fluid" src="assets/images/Not project image.jpg"
+                            alt="picture of my dog in place of a project screenshoot"></a>
+                </figure>
+            </div>
+            <div class="col-lg-6">
+                <figure>
+                    <a href=""><img class="img-fluid" src="assets/images/Not project image.jpg"
+                            alt="picture of my dog in place of a project screenshoot"></a>
+                    <a href="">
+                        <figcaption>Project 2 Title</figcaption>
+                    </a>
+                </figure>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6">
+                <figure>
+                    <a href="">
+                        <figcaption>Project 3 Title</figcaption>
+                    </a>
+                    <a href=""><img class="img-fluid" src="assets/images/Not project image.jpg"
+                            alt="picture of my dog in place of a project screenshoot"></a>
+                </figure>
+            </div>
+            <div class="col-lg-6">
+                <figure>
+                    <a href=""><img class="img-fluid" src="assets/images/Not project image.jpg"
+                            alt="picture of my dog in place of a project screenshoot"></a>
+                    <a href="">
+                        <figcaption>Project 4 Title</figcaption>
+                    </a>
+                </figure>
+            </div>
+        </div>
+    </section>
+    <section id="contact" class="container-fluid">
+        <!--List of ways to contact me-->
+        <div class="row align-items-center">
+            <div class="col-lg-6">
+                <ul>
+                    <li>
+                        <i class="fa-solid fa-envelope"></i>
+                        <p>Email</p>
+                        <p>reecesmith@hotmail.co.uk</p>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-phone"></i>
+                        <p>Phone</p>
+                        <p>+44 (0)7398 285383</p>
+                    </li>
+                    <li>
+                        <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://linkedin.com" target="_blank">Linkedin</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com" target="_blank"><i class="fa fa-github"></i></a>
+                        <a href="https://github.com" target="_blank">GitHub</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-lg-6">
+                <!--Contact form-->
+                <h2 class="text-center">Contact Me</h2>
+                <form class="text-center" action="" method="post">
+                    <label class="form-label" for="name">Name</label>
+                    <input class="form-control" type="text" id="name" name="name" placeholder="Name" required>
+                    <label class="form-label" for="email">Email</label>
+                    <input class="form-control" type="email" id="email" name="email" placeholder="Email" required>
+                    <label class="form-label" for="number">Number</label>
+                    <input class="form-control" type="number" id="number" name="number" placeholder="Number">
+                    <label class="form-label" for="message">Message</label>
+                    <textarea class="form-control" id="message" name="message" placeholder="Message" rows="10" cols="30"
+                        required></textarea>
+                    <input type="submit" value="Submit">
+                </form>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
