--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Reece Smith - Personal Portfolio</title>
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/642b3ce8cf.js" crossorigin="anonymous"></script>
@@ -15,12 +21,12 @@
 <body>
     <header class="container-fluid">
         <!--Social links-->
-        <div class="row">
+        <div id="t-nav" class="row">
             <div class="col-6">
                 <ul class="nav">
-                    <li class="nav-item"><a class="nav-link" href="https://linkedin.com" target="_blank"><i
+                    <li class="nav-item nav-socials"><a class="nav-link" href="https://linkedin.com" target="_blank"><i
                                 class="fab fa-linkedin"></i></a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://github.com" target="_blank"><i
+                    <li class="nav-item nav-socials"><a class="nav-link" href="https://github.com" target="_blank"><i
                                 class="fa fa-github"></i></a></li>
                 </ul>
             </div>
@@ -33,13 +39,13 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-center" id="NavCollapse">
                         <ul class="navbar-nav align-items-center">
-                            <li class="nav-item">
+                            <li class="nav-item nav-words">
                                 <a class="nav-link" href="#about">About Me</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item nav-words">
                                 <a class="nav-link" href="#projects">Projects</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item nav-words">
                                 <a class="nav-link" href="#contact">Contact</a>
                             </li>
                         </ul>
@@ -48,13 +54,13 @@
             </div>
         </div>
         <!--Main and sub headings-->
-        <div class="row align-items-center text-center">
+        <div id="h-content" class="row align-items-center text-center">
             <div class="col-lg-6">
                 <h1>Reece Smith</h1>
                 <h2>Full Stack Web Developer</h2>
                 <h3>Turning ideas into reality, one line of code at a time.</h3>
             </div>
-             <!--Portait -->
+            <!--Portait -->
             <div class="col-lg-6">
                 <img class="img-fluid" src="assets/images/Header.png" alt="Reece Smith Portrait">
             </div>
