fix:responsivness of navbar sorted so it no longer overflows on screen larger than 1399px

--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
             <a href="">
               <figcaption>Project 1 Title</figcaption>
             </a>
-            <a href=""><img class="img-fluid" src="assets/images/Not project image.jpg"
+            <a href=""><img class="img-fluid project-img" src="assets/images/Not project image.jpg"
             alt="picture of my dog in place of a project screenshoot"></a>
           </figure>
         </div>
         <div class="col-lg-6">
           <figure>
-            <a href=""><img class="img-fluid" src="assets/images/Not project image.jpg"
+            <a href=""><img class="img-fluid project-img" src="assets/images/Not project image.jpg"
             alt="picture of my dog in place of a project screenshoot"></a>
             <a href="">
               <figcaption>Project 2 Title</figcaption>
@@ -132,14 +132,14 @@
               <figcaption>Project 3 Title</figcaption>
             </a>
             <a href="">
-              <img class="img-fluid" src="assets/images/Not project image.jpg"
+              <img class="img-fluid project-img" src="assets/images/Not project image.jpg"
               alt="picture of my dog in place of a project screenshoot">
             </a>
           </figure>
         </div>
         <div class="col-lg-6">
           <figure>
-            <a href=""><img class="img-fluid" src="assets/images/Not project image.jpg"
+            <a href=""><img class="img-fluid project-img" src="assets/images/Not project image.jpg"
             alt="picture of my dog in place of a project screenshoot"></a>
             <a href="">
               <figcaption>Project 4 Title</figcaption>
