docs: UXD section for README.md finished

--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
       <div id="top-navbar" class="row container-xxl">
         <div class="col-6">
           <ul class="nav">
-            <li class="nav-item nav-socials"><a class="nav-link" href="https://linkedin.com" target="_blank"><i
+            <li class="nav-item nav-socials"><a class="nav-link" href="https://www.linkedin.com/in/reece-r-smith/" target="_blank"><i
             class="fab fa-linkedin"></i></a></li>
-            <li class="nav-item nav-socials"><a class="nav-link" href="https://github.com" target="_blank"><i
+            <li class="nav-item nav-socials"><a class="nav-link" href="https://github.com/ReeceSmith14" target="_blank"><i
             class="fa fa-github"></i></a></li>
           </ul>
         </div>
         <!--Navigation links-->
+        <!--Bootstrap dropdown has been used for smaller screens. The tutorial for the drop down was provided by W3Schools-->
         <div class="col-6">
           <nav class="navbar navbar-expand-lg justify-content-center">
             <button type="button" class="navbar-toggler" data-bs-target="#nav-collapse"
@@ -155,12 +156,12 @@
               <p>+44 (0)7398 285383</p>
             </li>
             <li>
-              <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
-              <a href="https://linkedin.com" target="_blank">Linkedin</a>
+              <a href="https://www.linkedin.com/in/reece-r-smith/" target="_blank"><i class="fab fa-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/reece-r-smith/" target="_blank">Linkedin</a>
             </li>
             <li>
-              <a href="https://github.com" target="_blank"><i class="fa fa-github"></i></a>
-              <a href="https://github.com" target="_blank">GitHub</a>
+              <a href="https://github.com/ReeceSmith14" target="_blank"><i class="fa fa-github"></i></a>
+              <a href="https://github.com/ReeceSmith14" target="_blank">GitHub</a>
             </li>
           </ul>
         </div>
