docs: Site testing and CSS validation complete

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                   <a class="nav-link" href="#projects">Projects</a>
                 </li>
                 <li class="nav-item nav-words">
-                  <a class="nav-link" href="#contact">Contact</a>
+                  <a class="nav-link" href="#contact-section">Contact</a>
                 </li>
               </ul>
             </div>
@@ -87,7 +87,7 @@
             have any questions, please feel free to contact me.
           </p>
           <!--Contact me button that takes you to the contact section-->
-          <a href="#contact">
+          <a href="#contact-section">
             <button id="button">Contact Me</button>
           </a>
         </div>
