docs:Testing section write-up finished

--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@
             have any questions, please feel free to contact me.
           </p>
           <!--Contact me button that takes you to the contact section-->
-          <a href="#contact-section">
-            <button id="button">Contact Me</button>
-          </a>
+          <a id="button" href="#contact-section">Contact Me</a>
         </div>
       </div>
     </section>
@@ -97,46 +95,47 @@
       <!--Project gallery with anchored screenshots and project titles-->
       <!--Project gallary pictures will be replaced by code snipets screenshots
       and the anchor tag will take you to a seperate page which is exclusivily about that project-->
+      <h2 id="projects-heading">Projects</h2>
       <div class="row">
         <div class="col-lg-6">
-          <figure>
+          <div class="figure">
             <a target="_blank" href="https://github.com/ReeceSmith14/Project-1">
-              <figcaption>Project 1 Title</figcaption>
+              <p>Project 1 Title</p>
             </a>
             <a target="_blank" href="https://github.com/ReeceSmith14/Project-1"><img class="img-fluid project-img" src="assets/images/project-1.webp"
             alt="picture of my dog in place of a project screenshoot"></a>
-          </figure>
+          </div>
         </div>
         <div class="col-lg-6">
-          <figure>
+          <div class="figure">
             <a target="_blank" href="https://github.com/ReeceSmith14/Project-2"><img class="img-fluid project-img" src="assets/images/project-2.webp"
             alt="picture of my dog in place of a project screenshoot"></a>
             <a target="_blank" href="https://github.com/ReeceSmith14/Project-2">
-              <figcaption>Project 2 Title</figcaption>
+              <p>Project 2 Title</p>
             </a>
-          </figure>
+          </div>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-6">
-          <figure>
+          <div class="figure">
             <a target="_blank" href="https://github.com/ReeceSmith14/Project-3">
-              <figcaption>Project 3 Title</figcaption>
+              <p>Project 3 Title</p>
             </a>
             <a target="_blank" href="https://github.com/ReeceSmith14/Project-3">
               <img class="img-fluid project-img" src="assets/images/project-3.webp"
               alt="picture of my dog in place of a project screenshoot">
             </a>
-          </figure>
+          </div>
         </div>
         <div class="col-lg-6">
-          <figure>
+          <div class="figure">
             <a target="_blank" href="https://github.com/ReeceSmith14/Project-4"><img class="img-fluid project-img" src="assets/images/project-4.webp"
             alt="picture of my dog in place of a project screenshoot"></a>
             <a target="_blank" href="https://github.com/ReeceSmith14/Project-4">
-              <figcaption>Project 4 Title</figcaption>
+              <p>Project 4 Title</p>
             </a>
-          </figure>
+          </div>
         </div>
       </div>
     </section>
